--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
 	<header class="site-header">
 	  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
 	    <div class="container">
-	      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Blog</a>
+	      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">E-Assign</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	      </button>
@@ -26,6 +26,7 @@
 	        <div class="navbar-nav mr-auto">
 	          <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
 	          <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+	          <a class="nav-item nav-link" href="#">Your Assignment</a>
 	        </div>
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
@@ -56,7 +57,7 @@
 	      	{% block content %}{% endblock %}
 	    	
 	    </div>
-	    <div class="col-md-4">
+	   <!--  <div class="col-md-4">
 	      <div class="content-section">
 	        <h3>Our Sidebar</h3>
 	        <p class='text-muted'>You can put any information here you'd like.
@@ -68,7 +69,7 @@
 	          </ul>
 	        </p>
 	      </div>
-	    </div>
+	    </div> -->
 	  </div>
 	</main>
 	
