--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,7 +26,7 @@
 	        <div class="navbar-nav mr-auto">
 	          <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
 	          <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
-	          <a class="nav-item nav-link" href="#">Your Assignment</a>
+	          <a class="nav-item nav-link" href="{% url 'get-assign' %}">Your Assignment</a>
 	        </div>
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
