--- a/blog/templates/blog/getassign.html
+++ b/blog/templates/blog/getassign.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
-	{% for post in posts %}
+	{% for post in psts %}
 		<article class="media content-section">
 		  <!-- <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}"> -->
 		  <div class="media-body">
