--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,7 +27,7 @@
 	          <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
 	          <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
 	          <a class="nav-item nav-link" href="{% url 'get-assign' %}">Your Assignment</a>
-	          <a class="nav-item nav-link" href="{% url 'gen-assign' %}">Generate Assignment</a>
+	          <a class="nav-item nav-link" href="#">Generate Assignment</a>
 	        </div>
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
